added block always and all days

--- a/popup.html
+++ b/popup.html
@@ -10,6 +10,11 @@
       <label for="url">Website URL:</label>
       <input type="text" id="url" name="url" required />
       </br>
+      <label>Options:</label><br/>
+      <label><input id="always-blocked" type="checkbox"> Always blocked</label><br>
+      <label><input id="all-days" type="checkbox"> All days</label><br>
+      <br/>
+
       <label>Days of the Week:</label>
       <div id="days">
         <label><input type="checkbox" name="days" value="0"> Sunday</label><br>
@@ -24,12 +29,12 @@
       <br/>
 
       <label for="startTime">Start Time:</label>
-      <input type="time" id="startTime" name="startTime" required />
+      <input type="time" id="startTime" name="startTime" />
 
       <br/>
 
       <label for="endTime">End Time:</label>
-      <input type="time" id="endTime" name="endTime" required />
+      <input type="time" id="endTime" name="endTime" />
 
       </br>
 
