added options to block all days and all times more easily

--- a/popup.html
+++ b/popup.html
@@ -11,8 +11,9 @@
       <input type="text" id="url" name="url" required />
       </br>
       <label>Options:</label><br/>
-      <label><input id="always-blocked" type="checkbox"> Always blocked</label><br>
-      <label><input id="all-days" type="checkbox"> All days</label><br>
+      <label><input id="always-blocked" type="checkbox"> Block always</label><br>
+      <label><input id="block-24-h" type="checkbox"> Block 24 hours a day</label><br>
+      <label><input id="all-days" type="checkbox"> Block all days of the week</label><br>
       <br/>
 
       <label>Days of the Week:</label>
